# uhd_radar

./: Makefile
.github/workflows/: unit-tests.yml
config/: default.yaml  default_x310.yaml  synthetic_config.yaml
postprocessing/: auto_amplification.py  auto_amplification_instructions.md  permanent_storage.py  plot_samples.py  processing.py  reflectivity_maps.py
preprocessing/: generate_chirp.py
sdr/: CMakeLists.txt  chirp.cpp  chirp.hpp  gps-output.txt  gps_test.cpp  main.cpp  main.hpp  pseudorandom_phase.cpp  pseudorandom_phase_to_file.cpp  rf_settings.cpp  sdr.cpp  sdr.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_generate_chirp.py  unit_testing_instructions.md
tests/sdr/: test_chirp.cpp  test_pseudorandom_phase.cpp  test_sdr.cpp  test_utils.cpp
